fixed layout issues, small ui changes

--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,14 @@
 
 html{
     /* background: var(--main-backgroundGradient); */
+    height: 100svh;
+    width: 100%;
 }
 body{
     height: 100svh;
     /* background: var(--main-backgroundGradient); */
-    background-color:black;
+    background-color:var(--main-ligthBackground);
+    width: 100%;
     color: var(--main-textColor-black);
 }
 
@@ -33,7 +36,7 @@ body{
     --main-textColor-black: #222121;
     --main-windowTitle-color:white;
     --main-menuBarItem-fontSize: 14px;
-    --main-menuBarItem-fontWeigth: 900;
+    --main-menuBarItem-fontWeigth: 700;
 
     --main-widgetTitle-fontSize: 40px;
     --main-widgetSubtitle-fontSize: 20px;
@@ -41,10 +44,13 @@ body{
     --main-widgetSubtitle-fontWeight:900;
     --main-widgetTitle-color: #9D9D9D;
     --main-widgetSubtitle-color:  #505050;
+
+    --main-statusBarColor: white;
+    --main-statusBarTextColor: #2a2a2a;
 }  
 
 
-/* vars */
+/* end vars */
 
 
 /* START App Structure */
@@ -68,11 +74,11 @@ body{
     background: var(--main-backgroundGradient);
 }
 .content{
-    /* flex-grow:1; */
     padding-top:40px;
     background-color: var(--main-ligthBackground);
 }
 .appMenu{
+    display: flex;
     position:sticky;
     bottom: 0;
     min-height: 65px;
@@ -87,28 +93,49 @@ body{
 }
 /* END App Structure */
 
-.appMenuContent{
-    height: 100%;
-    width: 100%;
+.menuSection{
     display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
 }
+
+.menuItem{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+    min-width: 60px;
+}
+
+.menuItem .menuItemIcon{
+    width: 30px;
+}
+
+.menuItem .menuItemLabel{
+    font-size: var(--main-menuBarItem-fontSize);
+    font-weight: var(--main-menuBarItem-fontWeigth);
+}
+
 
 .userDetails.mergedStatusBar{
     padding:0;
     margin:0;
-    background-color: white;
+    background-color: var(--main-statusBarColor);
     transform: scaleX(105.5%);
     padding-bottom: 5px;
 }
 
 .mergedStatusBar > span{
-    color: var(--main-textColor-black);
+    color: var(--main-statusBarTextColor);
+
 }
 
 .mergedStatusBar > img{
     width: 25px;
     height: 25px;
-    margin-right:15px;
+    margin-right:18px;
 }
 
 .userDetails{
@@ -124,8 +151,8 @@ body{
 .userDetails .userProfilePicture{
     /* border:1px solid red; */
     border-radius: 50%;
-    max-height: 40px;
-    max-width: 40px;
+    max-height: 35px;
+    max-width: 35px;
     aspect-ratio: 1;
     object-fit: cover;
 }
@@ -133,42 +160,15 @@ body{
 .userDetails .username{
     font-size: 16px;
     font-weight: bold;
-
 }
 
-.menuSection{
-    /* background-color: red; */
-    flex-grow: 1;
-    display: flex;
-    align-items: center;
-    gap:10px;
-    justify-content: space-evenly;
-}
-
-.menuItem{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0 5px;
-    /* border:1px solid red; */
-    cursor: pointer;
-}
-
-.menuItem .menuItemIcon{
-    width: 30px;
-}
-
-.menuItem .menuItemLabel{
-    font-size: var(--main-menuBarItem-fontSize);
-    font-weight: var(--main-menuBarItem-fontWeigth);
-}
 
 .mainTitle{
     font-size: var(--main-windowTitle-fontsize);
     font-weight: var(--main-windowTitle-fontWeight);
     color: var(--main-windowTitle-color);
-    padding-bottom:40px;
-    padding-top:40px;
+    padding-bottom:45px;
+    padding-top:20px;
 }
 
 /* Widgets */
@@ -214,7 +214,6 @@ body{
         padding-top:10px;
     }
 
-
     .summaryWidget .dataDisplayContainer{
         display: flex;
         flex-direction: column;
@@ -223,31 +222,19 @@ body{
         margin-bottom:15px
     }
 
-    /* .summaryWidget .widgetContent .yearData{
-        flex-grow: 1;
-        text-align: center;
-        justify-content: center;
-        align-items: center;
-        display: flex;
-    } */
-
     .summaryWidget .dataDisplay{
         width: 80%;
         margin:0 auto;
         border-radius: 4px;
         padding:5px;
-
     }
 
     .summaryWidget .incomeSection{
         background-color: #DFF5D1;
-       
     }
 
     .summaryWidget .expenseSection{
         background-color: #F5D1D1;
-       
-    
     }
 
 /* end widgets */
@@ -255,7 +242,7 @@ body{
 .widgetContainer{
     display: flex;
     justify-content:center;
-    transform: translateY(25px);
+    transform: translateY(40px);
     gap: 20px;
 }
 
